tests/ui/resolve/dot-notation-type-namespace-suggest-path-sep.stderr
error[E0423]: expected value, found struct `String`
  --> $DIR/dot-notation-type-namespace-suggest-path-sep.rs:15:13
   |
LL |     let _ = String.new();
   |             ^^^^^^
   |
help: use the path separator to refer to an item
   |
LL |     let _ = String::new();
   |                   ~~

error[E0423]: expected value, found struct `String`
  --> $DIR/dot-notation-type-namespace-suggest-path-sep.rs:19:13
   |
LL |     let _ = String.default;
   |             ^^^^^^
   |
help: use the path separator to refer to an item
   |
LL |     let _ = String::default;
   |                   ~~

error[E0423]: expected value, found struct `Vec`
  --> $DIR/dot-notation-type-namespace-suggest-path-sep.rs:23:13
   |
LL |     let _ = Vec::<()>.with_capacity(1);
   |             ^^^^^^^^^
   |
help: use the path separator to refer to an item
   |
LL |     let _ = Vec::<()>::with_capacity(1);
   |                      ~~

error[E0423]: expected value, found type alias `Alias`
  --> $DIR/dot-notation-type-namespace-suggest-path-sep.rs:27:13
   |
LL |     let _ = Alias.new();
   |             ^^^^^
   |
help: use the path separator to refer to an item
   |
LL |     let _ = Alias::new();
   |                  ~~

error[E0423]: expected value, found type alias `Alias`
  --> $DIR/dot-notation-type-namespace-suggest-path-sep.rs:31:13
   |
LL |     let _ = Alias.default;
   |             ^^^^^
   |
help: use the path separator to refer to an item
   |
LL |     let _ = Alias::default;
   |                  ~~

error[E0423]: expected value, found module `foo`
  --> $DIR/dot-notation-type-namespace-suggest-path-sep.rs:35:13
   |
LL |     let _ = foo.bar;
   |             ^^^
   |
help: use the path separator to refer to an item
   |
LL |     let _ = foo::bar;
   |                ~~

error[E0423]: expected value, found enum `Bar`
  --> $DIR/dot-notation-type-namespace-suggest-path-sep.rs:39:13
   |
LL |     let _ = Bar.A;
   |             ^^^
   |
note: the enum is defined here
  --> $DIR/dot-notation-type-namespace-suggest-path-sep.rs:9:1
   |
LL | / enum Bar {
LL | |     A,
LL | |     B,
LL | | }
   | |_^
help: use the path separator to refer to a variant
   |
LL |     let _ = Bar::A;
   |                ~~

error[E0423]: expected value, found struct `std::cell::Cell`
  --> $DIR/dot-notation-type-namespace-suggest-path-sep.rs:46:9
   |
LL |         ::std::cell::Cell
   |         ^^^^^^^^^^^^^^^^^
...
LL |     Type!().get();
   |     ------- in this macro invocation
   |
   = note: this error originates in the macro `Type` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL |     <Type!()>::get();
   |     ~~~~~~~~~~~

error[E0423]: expected value, found struct `std::cell::Cell`
  --> $DIR/dot-notation-type-namespace-suggest-path-sep.rs:46:9
   |
LL |         ::std::cell::Cell
   |         ^^^^^^^^^^^^^^^^^
...
LL |     Type! {}.get;
   |     -------- in this macro invocation
   |
   = note: this error originates in the macro `Type` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL |     <Type! {}>::get;
   |     ~~~~~~~~~~~~

error[E0423]: expected value, found struct `Vec`
  --> $DIR/dot-notation-type-namespace-suggest-path-sep.rs:55:9
   |
LL |         Vec.new()
   |         ^^^
...
LL |     let _ = create!(type method);
   |             -------------------- in this macro invocation
   |
   = note: this error originates in the macro `create` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL |         Vec::new()
   |            ~~

error[E0423]: expected value, found struct `Vec`
  --> $DIR/dot-notation-type-namespace-suggest-path-sep.rs:60:9
   |
LL |         Vec.new
   |         ^^^
...
LL |     let _ = create!(type field);
   |             ------------------- in this macro invocation
   |
   = note: this error originates in the macro `create` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL |         Vec::new
   |            ~~

error[E0423]: expected value, found struct `std::cell::Cell`
  --> $DIR/dot-notation-type-namespace-suggest-path-sep.rs:46:9
   |
LL |         ::std::cell::Cell
   |         ^^^^^^^^^^^^^^^^^
...
LL |     let _ = create!(macro method);
   |             --------------------- in this macro invocation
   |
   = note: this error originates in the macro `Type` which comes from the expansion of the macro `create` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use the path separator to refer to an item
   |
LL |         <Type!()>::new(0)
   |         ~~~~~~~~~~~

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0423`.
